# hunspell-rs

./: Cargo.toml
src/: lib.rs  tests.rs
