[package]
name = "hunspell-rs"
version = "0.4.0"
authors = ["Lipka Boldizsár <lipkab@zoho.com>", "Bernhard Schuster <bernhard@ahoi.io>"]
description = "Rust bindings to the Hunspell library"
keywords = ["spellcheck", "hunspell"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/drahnr/hunspell-rs"
edition = "2021"

[dependencies]
encoding_rs = "0.8.35"
hunspell-sys = { git = "https://github.com/Gentle/hunspell-sys.git", default-features = false }
log = "0.4.17"

[features]
default = ["bundled"]

bundled = ["hunspell-sys/bundled"]
